WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157755
JSC should detect the right default locale even when it's not embedded in WebCore
https://bugs.webkit.org/show_bug.cgi?id=157755
Summary
JSC should detect the right default locale even when it's not embedded in Web...
Filip Pizlo
Reported
2016-05-16 14:21:52 PDT
Things.
Attachments
maybe the patch
(1.34 KB, patch)
2016-05-17 13:09 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(1.34 KB, patch)
2016-05-17 15:55 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(3.74 KB, patch)
2016-05-17 15:57 PDT
,
Filip Pizlo
keith_miller
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-05-17 13:09:32 PDT
Created
attachment 279156
[details]
maybe the patch
Filip Pizlo
Comment 2
2016-05-17 15:55:08 PDT
Created
attachment 279174
[details]
the patch
Filip Pizlo
Comment 3
2016-05-17 15:56:39 PDT
Comment on
attachment 279174
[details]
the patch What the heck, the ChangeLog didn't show up in the patch. Fixing...
Filip Pizlo
Comment 4
2016-05-17 15:57:21 PDT
Created
attachment 279175
[details]
the patch
Keith Miller
Comment 5
2016-05-17 16:00:37 PDT
Comment on
attachment 279175
[details]
the patch r=me
Filip Pizlo
Comment 6
2016-05-17 19:10:59 PDT
Landed in
http://trac.webkit.org/changeset/201066
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug